# tradepulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  compose.yaml  justfile  pyproject.toml  render.yaml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0addaba53686_baseline_schema_auth_audit.py  8d734251ff4e_backtests.py  91d0566854c9_paper_sessions.py  a3f7c2e91b44_alerts.py  b13d9815e40d_strategies_strategy_versions.py  ee76d2a81338_market_data_instruments_sources_ohlcv_.py
apps/api/app/: __init__.py  main.py  models.py  ops_router.py  worker.py
apps/api/app/cli/: __init__.py  backfill.py  export_openapi.py  seed.py
apps/api/app/core/: __init__.py  config.py  context.py  crypto.py  db.py  deps.py  email.py  errors.py  events.py  logging.py  middleware.py  observability.py  ratelimit.py  redis.py  repository.py  security.py  types.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/ai/: __init__.py  budget.py  prompts.py  router.py  schemas.py  service.py
apps/api/app/modules/ai/providers/: __init__.py  base.py  factory.py  gemini.py  ollama.py
apps/api/app/modules/audit/: __init__.py  models.py  service.py
apps/api/app/modules/auth/: __init__.py  deps.py  models.py  reset.py  router.py  schemas.py  service.py  sessions.py
apps/api/app/modules/backtesting/: __init__.py  compute.py  engine.py  metrics.py  models.py  orchestration.py  repository.py  router.py  schemas.py  service.py  snapshot.py  types.py
apps/api/app/modules/market_data/: __init__.py  ingestion.py  models.py  public_router.py  realtime.py  reference_backtest.py  repository.py  router.py  schemas.py  seed.py  service.py  signal.py  streaming.py  throttle.py
apps/api/app/modules/market_data/providers/: __init__.py  alpaca_provider.py  base.py  ccxt_provider.py  factory.py  yfinance_provider.py
apps/api/app/modules/strategies/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  spec.py
apps/api/app/modules/trading/: __init__.py  alerts.py  broker_schemas.py  broker_service.py  calc.py  live_gate.py  live_router.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/trading/brokers/: __init__.py  alpaca.py  base.py
apps/api/tests/: conftest.py  test_ai.py  test_auth.py  test_backtest.py  test_backtest_run.py  test_charting.py  test_health.py  test_ingestion.py  test_live_seam.py  test_market_data.py  test_ops.py  test_paper.py  test_providers.py  test_realtime.py  test_strategies.py  test_streaming.py  test_tenancy.py  test_throttle.py
apps/web/: .dockerignore  next.config.ts  package-lock.json  package.json
apps/web/src/: instrumentation-client.ts  instrumentation.ts  proxy.ts
apps/web/src/app/: apple-icon.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/account/: page.tsx
apps/web/src/app/(app)/alerts/: page.tsx
apps/web/src/app/(app)/backtests/: backtests-view.tsx  page.tsx
apps/web/src/app/(app)/calculator/: calculator-view.tsx  page.tsx
apps/web/src/app/(app)/chart/[id]/: page.tsx
apps/web/src/app/(app)/dashboard/: dashboard-view.tsx  page.tsx
apps/web/src/app/(app)/markets/: markets-view.tsx  page.tsx
apps/web/src/app/(app)/paper/: page.tsx  paper-view.tsx
apps/web/src/app/(app)/strategies/: page.tsx  strategies-view.tsx
apps/web/src/app/(auth)/forgot-password/: page.tsx
apps/web/src/app/(auth)/login/: login-form.tsx  page.tsx
apps/web/src/app/(auth)/reset-password/: page.tsx
apps/web/src/app/markets/[ticker]/: market-view.tsx  page.tsx
apps/web/src/app/methodology/: page.tsx
apps/web/src/components/: alert-feed.tsx  app-nav.tsx  app-sidebar.tsx  app-topbar.tsx  backtest-results.tsx  chart-workspace.tsx  data-badge.tsx  faq-jsonld.tsx  global-search.tsx  hypothetical-banner.tsx  indicator-panel.tsx  live-price.tsx  market-status.tsx  mobile-nav.tsx  providers.tsx  public-chart.tsx  signal-card.tsx  theme-toggle.tsx  track-record.tsx  user-menu.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  number-input.tsx  skeleton.tsx  toast.tsx  toggle.tsx
apps/web/src/lib/: brand.ts  chart-legend.ts  chart-theme.ts  indicators.ts  utils.ts
apps/web/src/lib/api/: client.ts  schema.ts
apps/web/src/lib/market/: use-market-socket.ts
apps/web/src/lib/markets/: faq.ts  slug.ts
docs/: DEPLOY.md  DEPLOY_FREE_CLOUD.md  DEPLOY_FREE_WALKTHROUGH.md
docs/adr/: 0001-modular-monolith.md  0002-async-task-queue-arq.md  0003-redis-not-kafka.md  0004-sessions-not-jwt.md  0005-owner-id-tenancy.md  0006-decimal-money.md  0007-tooling-uv-npm-just.md  0008-one-canonical-strategyspec.md  README.md
infra/: .env.prod.example  Caddyfile  Dockerfile.api  Dockerfile.web  backup.sh  compose.prod.yaml  deploy.sh  loki-config.yaml  prometheus.yml  promtail-config.yaml  restore.sh
