[project]
name = "trading-platform"
version = "0.1.0"
description = "AI-powered algorithmic trading platform (US equities + crypto): backtesting, paper trading, AI copilot."
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0,<6",  # capped: arq (the task queue) requires redis[hiredis]>=4.2,<6
    "arq>=0.26",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "pynacl>=1.5",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "orjson>=3.11.9",
    "sentry-sdk[fastapi]>=2.7",
    "ccxt>=4.5.56",
    "yfinance>=1.4.1",
    "alpaca-py>=0.43.4",
    "prometheus-fastapi-instrumentator>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.4",
    "asgi-lifespan>=2.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "hypothesis>=6.100",
]

[tool.uv]
# Cache (C:) and .venv (D:) are on different volumes; copy instead of hardlink.
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]  # FastAPI uses function calls (Depends) in defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "apps/api"
explicit_package_bases = true
namespace_packages = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "nacl.*",
    "arq.*",
    "ccxt.*",
    "yfinance.*",
    "alpaca.*",
    "pandas.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]
addopts = "-q"

[tool.coverage.run]
source = ["apps/api/app"]
branch = true

# ---------------------------------------------------------------------------
# import-linter: enforce the layered module DAG (L0 core -> L4 ai).
# A module may only import from layers strictly below it.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Layered architecture (core < audit < auth < data/strategies < backtesting < trading < ai)"
type = "layers"
layers = [
    "app.modules.ai",
    "app.modules.trading",
    "app.modules.backtesting",
    "app.modules.strategies | app.modules.market_data",
    "app.modules.auth",
    "app.modules.audit",
    "app.core",
]

[[tool.importlinter.contracts]]
name = "Kernel is independent of domain modules"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.modules"]
